--- a/port/html/obrigado.html
+++ b/port/html/obrigado.html
@@ -10,6 +10,6 @@
 <body class="main">
     <h1 class="text">Obrigado pelo contato!</h1>
     <p class="paragrafo">Em breve te dou um retorno ; )</p>
-    <a href="index.html" class="btn">Home</a>
+    <a href="/index.html" class="btn">Home</a>
 </body>
 </html>
