--- a/port/index.html
+++ b/port/index.html
@@ -235,6 +235,7 @@
                     <button type="submit">Enviar</button>
 
                     <input type="hidden" name="accessKey" value="703f997b-0dba-409b-b4c2-8240799e3a04">
+                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/html/obrigado.html">
                 </form>
             </section>
         </div>
